# palette-remap

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
palette_remap/: __init__.py  cli.py  core.py  mcp_server.py  models.py
tests/: test_mcp_server.py  test_remap.py
